--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,25 @@
   "name": "shopping-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd-mobile": "^5.32.0",
+    "antd-mobile-icons": "^0.3.0",
+    "axios": "^0.27.2",
+    "clsx": "^1.2.1",
+    "http-proxy-middleware": "^2.0.6",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.5",
+    "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
