--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-async-handler": "^1.2.0",
+    "mockjs": "^1.1.0",
     "mongoose": "^7.4.0"
   }
 }
