feat: product cards in Home.jsx

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mockjs": "^1.1.0",
-    "mongoose": "^7.4.0"
+    "mongoose": "^7.4.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
